Fixed vertically center of icon in checkbox, radio button and input field on IE

--- a/src/styles/atoms/_atoms.input.scss
+++ b/src/styles/atoms/_atoms.input.scss
@@ -153,7 +153,6 @@ textarea {
     .a-input__wrapper:before {
       @include fontawesome;
       font-size: 1.25rem;
-      height: $spacer-lg;
       line-height: $spacer-lg;
       position: absolute;
       right: 0;
