--- a/src/styles/atoms/_atoms.radio-checkbox.scss
+++ b/src/styles/atoms/_atoms.radio-checkbox.scss
@@ -82,7 +82,6 @@
       font-size: $icon-size-sm;
       height: $spacer;
       left: 0;
-      line-height: $spacer;
       margin-left: -$spacer;
       position: absolute;
       text-align: center;
